Сверстал первый экран

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <!-- Bootstrap,CSS -->
   <link rel="stylesheet" href="css/main.css"/>
   <link rel="stylesheet" href="css/media(1).css"/>
-  <link rel="stylesheet" href="fonts/ProximaNova/stylesheet.css"/>
+	<link rel="stylesheet" href="fonts/ProximaNova/stylesheet.css"/>
+	<link rel="stylesheet" href="fonts/Geogrotesque/stylesheet.css"/>
 	<link rel="stylesheet" href="css/animate.css"/>
 	<link rel="canonical" href="https://wowjs.uk/">
 </head>
@@ -105,11 +106,36 @@
 		<div class="width">
 			<hr class="first-hr"/>
 		</div>
+		<section class="first width">
+			<div class="first__left">
+				<h1 class="first__title">
+					Система контроля доступа учеников 
+					в вашей школе с автоматическим 
+					оповещением родителей
+				</h1>
+				<h2 class="first__sub-title">
+					Синхронизируем данные по пропускам, обслуживаем 
+					системы контроля доступа в учебных заведениях<br/> 
+					и отправляем уведомления родителям учеников 
+				</h2>
+				<button class="first__button">
+					<div class="first__button__effect"></div>
+					<span class="first__button__span">
+						Внедрить систему
+					</span>
+				</button>
+			</div>
 
-		<main class="main">
-
-		</main>
+			<div class="first__right">
+				<img class="first__right__img" src="img/tyrniket.png" alt="turnstile"/>
+			</div>
+		</section>
 	</div>
+
+<!--==================== 2 screen ====================-->
+	<main class="main">
+
+	</main>
 
 <!--==================== Js ====================-->
 	<script src="js/wow.min.js"></script>
