--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="css/media(1).css"/>
 	<link rel="stylesheet" href="fonts/ProximaNova/stylesheet.css"/>
 	<link rel="stylesheet" href="fonts/Geogrotesque/stylesheet.css"/>
+	<link rel="stylesheet" href="fonts/PTSans/stylesheet.css"/>
 	<link rel="stylesheet" href="css/animate.css"/>
 	<link rel="canonical" href="https://wowjs.uk/">
 </head>
@@ -354,6 +355,67 @@
 						Организация стабильной работы 
 						систем управления доступом
 					</p>
+				</div>
+			</div>
+		</section>
+
+<!--==================== 3 screen ====================-->
+		<section class="third">
+			<h2 class="main__title main__title__modificated">
+				Этапы работы и функционал системы
+			</h2>
+			<div class="third__main width">
+				<div class="third__content">
+					<div class="third__content__item">
+						<img class="third__content__item__img" src="img/third-1.png" alt="item"/>
+						<h3 class="third__content__item__title">
+							В вестибюле устанавливаются 
+							турникеты со считывателями
+						</h3>
+					</div>
+
+					<div class="third__content__item">
+						<img class="third__content__item__img third__content__item__img-1" src="img/third-2.png" alt="item"/>
+						<h3 class="third__content__item__title">
+							Ученик прислонил карту или
+							браслет к турникету
+						</h3>
+					</div>
+
+					<div class="third__content__item third__content__item-1">
+						<img class="third__content__item__img" src="img/third-3.png" alt="item"/>
+						<h3 class="third__content__item__title">
+							При считывании карты<br/>
+							данные отправляются в БРСК
+						</h3>
+					</div>
+				</div>
+
+				<div class="third__content">
+					<div class="third__content__item third__content__item-mod">
+						<img class="third__content__item__img" src="img/third-4.png" alt="item"/>
+						<h3 class="third__content__item__title">
+							Отправляется уведомление родителям, а чтобы исключить передачу карты третьим лицам срабатывает фотофиксация
+						</h3>
+					</div>
+
+					<div class="third__content__item third__content__item-mod">
+						<img class="third__content__item__img third__content__item__img-2" src="img/third-5.png" alt="item"/>
+						<h3 class="third__content__item__title">
+							В случае пожара<br/>
+							срабатывает автоматическая разблокировка
+							турникета и легко отстегиваются ограждения
+						</h3>
+					</div>
+
+					<div class="third__content__item third__content__item-1">
+						<img class="third__content__item__img" src="img/third-6.png" alt="item"/>
+						<h3 class="third__content__item__title">
+							Информацию<br/>
+							о посещаемости можно<br/>
+							 посмотреть в личном кабинете 
+						</h3>
+					</div>
 				</div>
 			</div>
 		</section>
